# versioneer

./: Cargo.toml  README.md
versioneer/: Cargo.toml
versioneer-cli/: Cargo.toml
versioneer/src/: builder.rs  bump.rs  error.rs  from_str.rs  lib.rs  version_part.rs
