[package]
name = "versioneer"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "crate for working with semantic versions"
repository = "https://github.com/dewey4iv/versioneer"
readme = "README.md"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
regex = "1.11.1"
